--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,14 +32,13 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.ECR_REPOSITORY }}:latest1 .
+          docker build -t threemay/goexpertbackendtest .
 
-      - name: Push Docker image to ECR
+      - name: Build, tag, and push image to ECR
+        env:
+          ECR_REGISTRY: <your-aws-account-id>.dkr.ecr.<region>.amazonaws.com
+          ECR_REPOSITORY: <your-repository-name>
+          IMAGE_TAG: latest
         run: |
-          # export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          # export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # export AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}
-          # aws sts get-caller-identity
-          # aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/a9h1i7z6
-
-          docker push ${{ secrets.ECR_REPOSITORY }}:latest1
+          docker tag threemay/goexpertbackendtest:latest public.ecr.aws/a9h1i7z6/threemay/goexpertbackendtest:latest
+          docker push public.ecr.aws/a9h1i7z6/threemay/goexpertbackendtest:latest
