--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,5 +40,12 @@ jobs:
           ECR_REPOSITORY: <your-repository-name>
           IMAGE_TAG: latest
         run: |
+          sudo apt-get update
+          sudo apt-get install -y curl unzip
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+          aws --version
+          
           docker tag threemay/goexpertbackendtest:latest public.ecr.aws/a9h1i7z6/threemay/goexpertbackendtest:latest
           docker push public.ecr.aws/a9h1i7z6/threemay/goexpertbackendtest:latest
