--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,9 +40,9 @@ jobs:
           ECR_REPOSITORY: <your-repository-name>
           IMAGE_TAG: latest
         run: |
-          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          export AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}
+          # export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          # export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          # export AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}
           aws sts get-caller-identity
           docker build -t threemay/goexpertbackendtest:latest .
           docker tag threemay/goexpertbackendtest:latest public.ecr.aws/a9h1i7z6/threemay/goexpertbackendtest:latest
